--- a/client/src/components/Contact/Contact.css
+++ b/client/src/components/Contact/Contact.css
@@ -1,15 +1,7 @@
-.Contact-container {
-  padding-top: var(--spacing-5);
-}
-
 .Contact-content {
   padding-top: var(--spacing-3);
   display: flex;
   flex-direction: column;
-  /* min-height: 460px;
-  height: 100%; */
-  min-width: 850px;
-  max-width: 850px;
   width: 100%;
 }
 
