--- a/client/src/components/Experience/Experience.css
+++ b/client/src/components/Experience/Experience.css
@@ -1,10 +1,3 @@
-.Experience-container {
-  /* padding-left: 105px;
-  padding-right: 105px; */
-  padding-top: var(--spacing-5);
-  padding-bottom: var(--spacing-5);
-}
-
 .Experience-content {
   display: flex;
   padding-top: var(--spacing-4);
