--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -1,11 +1,8 @@
-.Projects-container {
-  padding-top: var(--spacing-5);
-  padding-bottom: var(--spacing-5);
+.Projects-container h2 {
+  margin-bottom: var(--spacing-4);
 }
 
 .Projects-content {
-  padding-top: var(--spacing-3);
-  padding-bottom: var(--spacing-4);
   display: flex;
   flex-direction: column;
   gap: var(--spacing-6);
